# agentropic-messaging

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: builder.rs  error.rs  lib.rs  mailbox.rs  message.rs  performative.rs  prelude.rs  router.rs
src/protocols/: mod.rs  request_reply.rs
tests/: message_tests.rs  router_tests.rs
